# grove

./: .editorconfig  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-intro.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  xdebug.yml
blog/: 2026-07-01-grove-gets-tools.md
crates/grove-cli/: Cargo.toml
crates/grove-cli/src/: cli.rs  main.rs  output.rs
crates/grove-core/: Cargo.toml
crates/grove-core/src/: config.rs  driver.rs  error.rs  httpgen.rs  lib.rs  paths.rs  project.rs  registry.rs  reqlog.rs  site.rs
crates/grove-daemon/: Cargo.toml
crates/grove-daemon/src/: commands.rs  dev.rs  docker.rs  ipc.rs  lib.rs  license.rs  logs.rs  state.rs  tunnels.rs
crates/grove-dns/: Cargo.toml
crates/grove-dns/src/: lib.rs
crates/grove-gui/: Cargo.toml  build.rs  tauri.conf.json
crates/grove-gui/capabilities/: default.json
crates/grove-gui/icons/: icon.icns
crates/grove-gui/src/: main.rs
crates/grove-gui/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/grove-gui/ui/src/: App.svelte  app.css  main.ts
crates/grove-gui/ui/src/components/: AboutModal.svelte  Database.svelte  Doctor.svelte  Logs.svelte  Mail.svelte  NewSiteModal.svelte  NodePanel.svelte  PhpPanel.svelte  Requests.svelte  Services.svelte  SettingsModal.svelte  SiteTable.svelte  Tools.svelte  Tunnels.svelte  Webhooks.svelte
crates/grove-gui/ui/src/lib/: api.ts  sqlHighlight.ts  theme.ts  types.ts
crates/grove-ipc/: Cargo.toml
crates/grove-ipc/src/: client.rs  lib.rs  protocol.rs  transport.rs
crates/grove-license/: Cargo.toml
crates/grove-license/examples/: keygen.rs  verify.rs
crates/grove-license/src/: lib.rs
crates/grove-os/: Cargo.toml
crates/grove-os/src/: lib.rs  linux.rs  macos.rs  service.rs  windows.rs
crates/grove-pro/: Cargo.toml
crates/grove-pro/src/: lib.rs
crates/grove-proxy/: Cargo.toml
crates/grove-proxy/src/: fastcgi.rs  handler.rs  lib.rs  server.rs  state.rs  tls.rs
crates/grove-runtime/: Cargo.toml
crates/grove-runtime/src/: fpm.rs  install.rs  lib.rs  node.rs  registry.rs  scaffold.rs  xdebug.rs
crates/grove-secrets/: Cargo.toml
crates/grove-secrets/examples/: demo.rs  http_demo.rs
crates/grove-secrets/src/: lib.rs
crates/grove-services/: Cargo.toml
crates/grove-services/src/: catalog.rs  convert.rs  lib.rs  mail.rs  manager.rs  qlog.rs  snapshot.rs  store.rs
crates/grove-tls/: Cargo.toml
crates/grove-tls/src/: lib.rs
crates/grove-tunnel/: Cargo.toml
crates/grove-tunnel/src/: client.rs  lib.rs  protocol.rs  record.rs  server.rs  util.rs
crates/grove-tunnel/tests/: loopback.rs
deploy/tunnel/: Caddyfile  README.md  grove-tunnel.service  setup.sh
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DATABASE.md  DEBUGGING.md  DOCKER.md  INSTALL.md  MCP.md  MIGRATE-FROM-HERD.md  PRD.md  PRO.md  README.md  SIGNING.md  TESTING.md  TUNNEL.md
