[workspace]
resolver = "2"
members = [
    "crates/grove-core",
    "crates/grove-ipc",
    "crates/grove-tls",
    "crates/grove-dns",
    "crates/grove-proxy",
    "crates/grove-tunnel",
    "crates/grove-runtime",
    "crates/grove-services",
    "crates/grove-os",
    "crates/grove-daemon",
    "crates/grove-cli",
    "crates/grove-gui",
]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["Knut / Wirelabs AS"]
repository = "https://github.com/wirelabs/grove"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Paths
directories = "5"
dirs = "5"

# Networking / HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# DNS
hickory-server = "0.24"
hickory-proto = "0.24"

# TLS (pin to the `ring` crypto provider to avoid a C/cmake toolchain dep)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }

# Tunnel multiplexing (pure Rust, no C toolchain)
tokio-yamux = "0.3"

# Misc
shellexpand = "3"
once_cell = "1"
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
