[package]
name = "grove-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
grove-core = { path = "../grove-core" }
grove-ipc = { path = "../grove-ipc" }
grove-daemon = { path = "../grove-daemon" }
grove-tls = { path = "../grove-tls" }
grove-os = { path = "../grove-os" }
grove-runtime = { path = "../grove-runtime" }
grove-tunnel = { path = "../grove-tunnel" }
grove-license = { path = "../grove-license" }
grove-secrets = { path = "../grove-secrets", features = ["http"] }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tar = "0.4"
flate2 = "1"
# Database schema/query tools for the MCP server (shared engine from `e`).
e-db = { git = "https://github.com/kwhorne/e.git" }
tracing.workspace = true
tracing-subscriber.workspace = true
