[package]
name = "grove-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
shellexpand.workspace = true
once_cell.workspace = true
