[package]
name = "grove-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
grove-core = { path = "../grove-core" }
hickory-server.workspace = true
hickory-proto.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait = "0.1"
