[package]
name = "grove-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Grove desktop GUI (Tauri + Svelte)"

[[bin]]
name = "grove-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grove-core = { path = "../grove-core" }
grove-ipc = { path = "../grove-ipc" }
grove-runtime = { path = "../grove-runtime" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
