[package]
name = "grove-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Grove desktop GUI (Tauri + Svelte)"

[[bin]]
name = "grove-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grove-core = { path = "../grove-core" }
grove-ipc = { path = "../grove-ipc" }
grove-runtime = { path = "../grove-runtime" }
grove-services = { path = "../grove-services" }
grove-license = { path = "../grove-license" }
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
