[package]
name = "grove-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Grove desktop GUI (Tauri + Svelte)"

[[bin]]
name = "grove-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grove-core = { path = "../grove-core" }
grove-ipc = { path = "../grove-ipc" }
grove-runtime = { path = "../grove-runtime" }
grove-services = { path = "../grove-services" }
grove-license = { path = "../grove-license" }
# Reused database-client engine (Laravel .env aware) from the `e` editor.
e-db = { git = "https://github.com/kwhorne/e.git" }
# Grove Pro feature entry points. The in-tree crate is an open-source STUB that
# returns a friendly "not included" error; official release builds swap in the
# proprietary implementation (private repo) so the license gate can't simply be
# patched out. The free read-only database browser never touches this crate.
grove-pro = { path = "../grove-pro" }
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
