[package]
name = "grove-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
grove-core = { path = "../grove-core" }
grove-proxy = { path = "../grove-proxy" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
# Pure-Rust HTTP(S) + archive handling — no OpenSSL / zlib C deps.
ureq = { version = "2", default-features = false, features = ["tls"] }
flate2 = "1"
tar = "0.4"
