[package]
name = "grove-services"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
grove-core = { path = "../grove-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["parsing"] }
# Pure-Rust download + extraction (shared approach with grove-runtime).
ureq = { version = "2", default-features = false, features = ["tls"] }
flate2 = "1"
tar = "0.4"
# Cross-dialect database conversion (MySQL/PostgreSQL/SQLite).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "mysql",
    "postgres",
    "sqlite",
    "any",
] }
