[package]
name = "grove-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
grove-core = { path = "../grove-core" }
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
